[project]
name = "lento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "markitdown>=0.0.1a4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "openai>=1.63.2",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.24",
]
